// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link applies button styles when rendering a button element 1`] = `
<button
  className="Link"
/>
`;

exports[`Link passes href down to link element 1`] = `
<a
  className="Link"
  href="https://github.com"
/>
`;

exports[`Link respects hoverColor prop 1`] = `
<a
  className="Link"
  data-hover-color="accent.fg"
/>
`;

exports[`Link respects the  "sx" prop when "muted" prop is also passed 1`] = `
.c0 {
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
}

<a
  className="c0 Link"
  data-muted={true}
  muted={true}
/>
`;

exports[`Link respects the "muted" prop 1`] = `
<a
  className="Link"
  data-muted={true}
  muted={true}
/>
`;
